Fixed some mobile dark mode issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@
 
 .dark-mode img {
 	width: 100%;
-	opacity: .6;
+	opacity: .7;
 }
 
 .dark-mode li a:hover {
@@ -63,7 +63,7 @@
     border-radius: 50px;
 	padding: 0.25rem;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.1s ease;
 }
 
 .dark-mode-toggle::before {
@@ -75,7 +75,7 @@
     height: 1.5rem;
     background-color: #333333;
     border-radius: 50%;
-    transition: transform 0.3s ease;
+    transition: transform 0.1s ease;
  }
 
 input[type="checkbox"] {
@@ -370,7 +370,46 @@ iPads, other Tablets in portrait
 */
 
 @media (max-device-width: 1024px) {
+	.dark-mode-toggle {
+		position: relative;
+		vertical-align: middle;
+		float: right;
+		width: 3rem;
+		margin-top: .55rem;
+		margin-right: 2rem;
+		height: 1.5rem;
+		background-color: #cccccc;
+		border-radius: 50px;
+		padding: 0.25rem;
+		cursor: pointer;
+		transition: background-color 0.1s ease;
+	}
 	
+	.dark-mode-toggle::before {
+		content: '';
+		position: absolute;
+		top: .26rem;
+		left: .3rem;
+		width: 1.5rem;
+		height: 1.5rem;
+		background-color: #333333;
+		border-radius: 50%;
+		transition: transform 0.1s ease;
+	 }
+	
+	input[type="checkbox"] {
+		display: none;
+	}
+	
+	input[type="checkbox"]:checked + .dark-mode-toggle {
+		background-color: #333333;
+	}
+	
+	input[type="checkbox"]:checked + .dark-mode-toggle::before {
+		transform: translateX(1.2rem);
+		background-color: rgba(255, 255, 255, 0.774);
+	}
+
 	.sec1, nav, header {
 		margin-top: 0;
 		margin-right: 0;
